# verus-topology

./: Cargo.toml  README.md
.github/workflows/: check.yml
docs/: TODO.md  construction-proof-plan.md  future-topology-proofs.md  next-steps-roadmap.md  tiers-3-4-roadmap.md  tiers-3b-3c-3a-4a-implementation.md
scripts/: check-single-file.sh  check.sh  profile-modules.sh
src/: checker_proofs.rs  checkers.rs  connectivity.rs  connectivity_proofs.rs  construction.rs  construction_proofs.rs  delaunay.rs  euler_ops.rs  euler_validity.rs  geometric_checkers.rs  geometric_mesh.rs  invariants.rs  iteration.rs  lib.rs  mesh.rs  point_in_solid.rs  queries.rs  refinement.rs
